--- a/Light.css
+++ b/Light.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Special+Elite|Rock+Salt|Audiowide');
 
 body{
-    background-image: url("https://pbs.twimg.com/profile_images/691303256379777024/xuD9T95V.jpg");
+    background-image: url("Images/Background/Red Background.jpg");
+    background-size: contain;
 }
 h1{
     background-color: rgba(0, 0, 0, 0.8);  
